Correct centering jump, remove ul on about page

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+html {
+  overflow-y: scroll;
+}
 
 .floating-content {
   width: 50%;
