--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -11,9 +11,14 @@ h1 {
   color: #ffffff;
 }
 
+h3 {
+  margin: 0%;
+}
+
 h5 {
   margin: 2%;
   color: #b0dc0f;
+  padding: 0;
 }
 
 h6 {
